# gemm

plot/: PlotAll.m  PlotCompare.m  octave-workspace
source/backend/arm/kernel/: gemm.cpp  gemm.h  public.h
source/utils/: compare_matrices.cpp  compare_matrices.h  correct_gemm.cpp  correct_gemm.h  dclock.cpp  dclock.h  print_matrix.cpp  print_matrix.h  public.h  random_matrix.cpp  random_matrix.h
test/: CMakeLists.txt  README.md  main.cpp  run.sh
